# cursor-rust-tools

./: .gitignore  Cargo.toml  README.md
scripts/: install-linux.sh
src/: cargo_remote.rs  context.rs  main.rs  project.rs
src/docs/: extract_md.rs  generate.rs  index.rs  utils.rs  walk.rs
src/lsp/: change_notifier.rs  client_state.rs  rust_analyzer_lsp.rs  utils.rs
src/mcp/: utils.rs
src/ui/: app.rs  mod.rs  theme.rs
