[package]
edition = "2024"
name = "cursor-rust-tools"
version = "0.1.0"

[[bin]]
name = "cursor-rust-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-lsp = "0.2.2"
async-process = "2.3.0"
chrono = "0.4.40"
dirs = "5.0.1"
eframe = "0.31"
egui = "0.31"
egui-aesthetix = {git = "https://github.com/thebashpotato/egui-aesthetix", features = ["all_themes"]}
flume = "0.11.1"
futures = "0.3.31"
fuzzt = "0.3.1"
glob = "0.3.2"
html2md = "0.2.15"
ignore = "0.4.23"
lazy_static = "1.5.0"
lsp-types = "0.95.1"
mcp-core = {git = "https://github.com/terhechte/mcp-core", branch = "allow-tool-context", features = ["sse"]}
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
open = "5"
regex = "1.11.1"
rfd = "0.15.3"
schemars = "0.8.22"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tokio = {version = "1.44", features = ["full"]}
toml = "0.8.20"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
url = "2.5.4"
